# open-trading-api

./: .gitignore  README.md
backtester/: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  kis_auth.py  mkdocs.yml  pyproject.toml
backtester/.github/: PULL_REQUEST_TEMPLATE.md
backtester/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backtester/.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
backtester/backend/: main.py
backtester/backend/routes/: luxon.py
backtester/data/: mcp_tool_catalog.json
backtester/deploy/: README.md  luxon-fred-daemon.service  luxon-fred-daemon.timer
backtester/docs/: LUXON_INTELLIGENCE.md  LUXON_INTELLIGENCE_COMPLETE.md  PROJECT_ANATOMY.md  TOOLS_INTEGRATION.md  index.md
backtester/docs/getting-started/: installation.md  quickstart.md
backtester/docs/luxon/: gotham_graph_spec.md
backtester/kis_backtest/: __init__.py  client.py
backtester/kis_backtest/codegen/: generator.py
backtester/kis_backtest/core/: __init__.py  pipeline.py  strategy_comparison.py  walk_forward.py
backtester/kis_backtest/execution/: __init__.py  alerts.py  capital_ladder.py  fill_tracker.py  kill_switch.py  live_monitor.py  models.py  order_executor.py  review_scheduler.py  risk_gateway.py  vault_writer.py
backtester/kis_backtest/forecasting/: __init__.py  kronos_adapter.py
backtester/kis_backtest/lean/: executor.py  project_manager.py
backtester/kis_backtest/luxon/: README.md  __init__.py  __main__.py  backtest_bridge.py  executor_bridge.py  naming_registry_sprint1.md  naming_registry_sprint3.md  orchestrator.py  terminal.py  terminal_cli.py  wf_cli.py
backtester/kis_backtest/portfolio/: __init__.py  ackman_druckenmiller.py  analyzer.py  asymmetric_position.py  catalyst_tracker.py  conviction_sizer.py  cufa_bridge.py  factor_to_views.py  feedback_adapter.py  investor_letter.py  macro_regime.py  mcp_bridge.py  mcp_connector.py  mcp_data_provider.py  regime_allocator.py  review_engine.py  universe_builder.py
backtester/kis_backtest/providers/: __init__.py
backtester/kis_backtest/utils/: korean_market.py  market_calendar.py
backtester/kis_mcp/tools/: backtest.py
backtester/reports/hourly/: 20260413_1441.md  20260413_1449.md  20260413_1642.md
backtester/results/pipeline/: 20260405_102813_hyundai_construction.json
backtester/results/portfolio/: 20260405_104051_multi_sector_15.json
backtester/samples/: __init__.py  gotham_sample.py  hhi_config.py
backtester/scripts/: feedback_loop.py  install_scheduler.ps1  luxon_dashboard.py  luxon_hourly.cmd  luxon_html_dashboard.py  luxon_lean_integration.py  luxon_macro_daemon.py  luxon_monthly.cmd  luxon_monthly_review.py  luxon_paper_trader.py  luxon_quant_hourly.py  luxon_quarterly.cmd  luxon_quarterly_review.py  luxon_run.py  luxon_server.py  luxon_terminal_run.py  opencode_serve.cmd  publish_review.py  run_daily_review.py  run_first_backtest.py  run_paper_trading.py  run_walk_forward.py  setup_luxon_scheduler.ps1  setup_scheduler.ps1  setup_scheduler_windows.ps1  setup_task_scheduler.ps1  smoke_phase1_e2e.py  smoke_sprint1.py  smoke_sprint3.py  smoke_test.py  sync_claude_opencode.cmd  sync_claude_opencode.py
backtester/tests/: test_ackman_druckenmiller.py  test_asymmetric_position.py  test_backtest_collection.py  test_capital_ladder.py  test_catalyst_tracker.py  test_conviction_sizer.py  test_cufa_bridge.py  test_cufa_conviction.py  test_e2e_mcp_backtest.py  test_e2e_pipeline.py  test_investor_letter.py  test_macro_regime.py  test_macro_regime_integration.py  test_mcp_data_provider.py  test_order_executor.py  test_oss_readiness.py  test_phase3_monitoring.py  test_phase4_review.py  test_pipeline_mcp_integration.py  test_quality_gates.py  test_regime_allocator.py  test_review_engine.py  test_risk_gateway.py  test_risk_modules.py  test_seed_risk_gateway.py  test_strategy_comparison.py  test_terminal_live_execution.py  test_universe_builder.py  test_upbit_client.py  test_v1_1_i18n_brokers.py  test_v1_2_brokers_i18n.py  test_v1_integration_fixes.py  test_walk_forward.py  test_walk_forward_ladder.py
backtester/tests/luxon/: __init__.py  (+18 more)
(+107 files in other folders)
