[project]
name = "luxon-terminal"
version = "1.0.0"
description = "AI-driven quant trading terminal with Walk-Forward OOS validation, Capital Ladder promotion, and MCP integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Luxon Terminal Contributors" },
]
keywords = [
    "quant",
    "trading",
    "backtesting",
    "walk-forward",
    "kis",
    "korea-investment",
    "mcp",
    "ai-trading",
    "portfolio-optimization",
    "risk-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "PyJWT>=2.0.0",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
# 거래소 연결 (실거래)
exchange = [
    "websockets>=11.0.0",
    "pycryptodome>=3.20.0",
]

# 대시보드 + 시각화
viz = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "pyvis>=0.3.2",
]

# MCP 통합 (선택)
mcp = [
    "mcp[cli]>=1.9.4",
]

# Alpaca broker (v1.1)
alpaca = [
    "alpaca-py>=0.21.0",
]

# Interactive Brokers (v1.2)
ibkr = [
    "ib-insync>=0.9.86",
]

# Crypto exchanges (v1.2)
crypto = [
    "requests>=2.32.5",
]

# Documentation site
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# 전체
all = [
    "luxon-terminal[exchange,viz,mcp,alpaca,ibkr,crypto]",
]

# 개발
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "pip-audit>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/pollmap/luxon-terminal"
Documentation = "https://github.com/pollmap/luxon-terminal/blob/main/backtester/ARCHITECTURE.md"
Repository = "https://github.com/pollmap/luxon-terminal"
Changelog = "https://github.com/pollmap/luxon-terminal/blob/main/backtester/CHANGELOG.md"
Issues = "https://github.com/pollmap/luxon-terminal/issues"

[project.scripts]
luxon-run = "kis_backtest.luxon.terminal_cli:main"
luxon-wf = "kis_backtest.luxon.wf_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kis_backtest"]

[tool.hatch.build.targets.sdist]
include = [
    "kis_backtest/",
    "tests/",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "CHANGELOG.md",
    "ARCHITECTURE.md",
]
exclude = [
    "fills/",
    "data/",
    ".luxon/",
    "*.pyc",
    "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "integration: 실제 MCP/KIS 서버 필요 (pytest -m integration)",
    "slow: 느린 테스트 (pytest -m 'not slow' 로 제외)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["kis_backtest"]
omit = [
    "kis_backtest/providers/kis/*.py",
    "kis_backtest/luxon/intelligence/*.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["legacy/", ".venv/", "build/", "dist/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length은 tool.ruff에서 관리

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["legacy/", "tests/"]

[tool.bandit]
exclude_dirs = ["tests", "legacy"]
skips = ["B101"]  # assert 허용 (테스트용)
